fixed results overflow

--- a/src/app/benchmark-results/benchmark-results.component.scss
+++ b/src/app/benchmark-results/benchmark-results.component.scss
@@ -1,3 +1,13 @@
+.container {
+    width: 100%;
+    height: 100%;
+    .scrollable {
+        overflow-y: auto;
+        overflow-x: hidden;
+        box-sizing: content-box;
+    }
+}
+
 .chart {
     display: block;
     width: 100%;
