--- a/src/app/benchmark/benchmark.component.scss
+++ b/src/app/benchmark/benchmark.component.scss
@@ -38,7 +38,6 @@
         }
         .results {
             width: 30rem;
-            margin-right: 0.5rem;
             display: grid;
             grid-template: auto 1fr / auto 1fr;
             mat-divider {
